# junkcode

./: .gitmodules  README
kerberos/: msktutil-0.3.16.4-1.el5.rf.x86_64.rpm
linux/iptables/: antiscanning.sh
linux/mymemcpy/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in~  config.status  configure  configure.ac  libmymemcpy.la  libtool  make-mymemcpy.sh  mymemcpy.c  mymemcpy.lo
linux/mymemcpy/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
linux/perf/memory/: largepages3.c  malloccount.c  statm.sh
linux/securitycheck/: checksec.sh
linux/sshlockout/: sshlockout.c
pki/: crl_from_ldap.pl  extract_enc_cert_pki.sh
pki/pki_read_crl_ldap/: pki_read_crl_ldap-2.0-1.noarch.rpm  pki_read_crl_ldap-2.0-1.src.rpm  pki_read_crl_ldap-2.1-1.noarch.rpm  pki_read_crl_ldap-2.1-1.src.rpm  pki_read_crl_ldap-2.1-2.noarch.rpm  pki_read_crl_ldap-2.1-2.src.rpm  pki_read_crl_ldap-2.1-3.noarch.rpm  pki_read_crl_ldap-2.1-3.src.rpm  pki_read_crl_ldap-2.2-1.noarch.rpm  pki_read_crl_ldap-2.2-1.src.rpm  pki_read_crl_ldap-2.3-1.noarch.rpm  pki_read_crl_ldap-2.3-1.src.rpm  pki_read_crl_ldap.conf  pki_read_crl_ldap.crond  pki_read_crl_ldap.logrotate  pki_read_crl_ldap.sh  pki_read_crl_ldap.spec  slapd.conf
programming/: mem_sequence.c
programming/C/ex_C_programming_a_moderm_approach_king/: sum1  sum1.c
programming/C/junk/: a.out  perror.c
programming/fctl/: testlockf_ex.c  testlockf_fnctl.c  testlockf_mand.c
programming/fuzz/: zzuf.spec
programming/fuzz/zzuf-0.13/: Makefile  config.h  config.status  libtool
programming/insecureprogramming/SourceCodeAnalysisTools/: cca08.tgz
programming/perl/autoautoconf/: genperl_autoconfcheck.sh
programming/perl/hax.tor/: index.html  xor.pl  xx
pubkey/: id_dsa_devzero2000.pub  identity_rsa1_devzero2000.pub
rpm/: minirpm.c
rpm/SRPMS/: fms-3.5.3-status.patch  fms.spec
rpm/aix/rpm/: perl-DBD-DB2-1.1-1.aix53.ppc.rpm  perl-DBD-DB2-1.1-1.aix53.src.rpm  perl-DBI-1.59-1.aix53.ppc.rpm  perl-DBI-1.59-1.aix53.src.rpm  perl-Digest-HMAC-1.01-13.aix53.noarch.rpm  perl-Digest-HMAC-1.01-13.aix53.src.rpm  perl-Digest-HMAC-1.01-13.noarch.rpm  perl-Digest-SHA1-2.11-4.aix53.ppc.rpm  perl-Digest-SHA1-2.11-4.aix53.src.rpm  perl-Net-DNS-0.61-1.aix53.ppc.rpm  perl-Net-DNS-0.61-1.aix53.src.rpm  perl-Net-IP-1.25-4.aix53.noarch.rpm  perl-Net-IP-1.25-4.aix53.src.rpm  perl-Tie-DNS-0.41-1.aix53.noarch.rpm  perl-Tie-DNS-0.41-1.aix53.src.rpm  simplestRPMv3-1.0-1.src.rpm  simplestRPMv3-1.0-2.src.rpm
rpm/aix/rpm-3.0.5/: rpm-3.0.5-51.spec  rpm-3.0.5-aix.patch  rpm-3.0.5-aix52.patch  rpm-3.0.5-dbpath.patch  rpm-3.0.5-freespace.patch  rpm-3.0.5-glob.patch  rpm-3.0.5-intl.patch  rpm-3.0.5-mntent.patch  rpm-3.0.5-mode.patch  rpm-3.0.5-nonrpm.patch  rpm-3.0.5-open64.patch  rpm-3.0.5-payload.patch  rpm-3.0.5-pyhack.patch  rpm-3.0.5-ramfs.patch  rpm-3.0.5-reloc.patch  rpm-3.0.5-stat64.patch  rpm-3.0.5-typechk.patch  rpm-3.0.5-unsetenv.patch
rpm/rhn/: mrepo_redhat.sh  xxexample_freedups.sh
rpm/rpm-find-deps/: rpm-find-deps.sh
rpm/rpm5/cooker/: bootstrap.spec  rpm-5.3.6-workaround-segfault-with-openmp.patch  rpm-5.3.7-dbconvert-rebuilddb-nofsync.patch  (+3 more)
rpm/rpm5/cooker/rpm-5.3.7/file/src/: Makefile.am  Makefile.in  apprentice.c  cdf.c  funcs.c  readelf.c  softmagic.c
rpm/rpm5/cooker/rpm-5.3.7/lua/: .cvsignore  Makefile.am  Makefile.in  bin2c.c  ltests.c  luaconf.h
rpm/rpm5/cooker/rpm-5.3.7/lua/CVS/: Entries
rpm/rpm5/cooker/rpm-5.3.7/lua/chkconfig/: chkconfig.c  leveldb.c  leveldb.h
rpm/rpm5/cooker/rpm-5.3.7/lua/chkconfig/CVS/: Entries  Repository
rpm/rpm5/cooker/rpm-5.3.7/lua/local/: .cvsignore  lcrypto.c  lcrypto.h  llocal.c  llocal.h  llocal.lua  lom.lua  lposix.c  lrexlib.h  lrexlib.txt  lrexlib_algo.h  lrexlib_common.c  lrexlib_common.h  lrexlib_lpcre.c  lrexlib_lpcre_f.c  lrexlib_lposix.c  lshadow.c  lshadow.h  lsyck.c  lsyck.h  luuid.c  luuid.h  lwrs.c  lwrs.h  lxplib.c  lxplib.h
rpm/rpm5/cooker/rpm-5.3.7/lua/local/CVS/: Entries  Repository
rpm/rpm5/cooker/rpm-5.3.7/lua/shadow/: chkname.h  commonio.c  commonio.h  copydir.c  defines.h  faillog.h  fputsx.c  getdef.c  getdef.h  groupadd.c  groupio.c  groupio.h  gshadow.c  gshadow_.h  list.c  nscd.h  prototypes.h  pwauth.h  pwio.c  pwio.h  sgetgrent.c  sgetpwent.c  sgroupio.c  sgroupio.h  shadow_config.h  shadowio.c  shadowio.h  strtoday.c  useradd.c
rpm/rpm5/cooker/rpm-5.3.7/lua/shadow/CVS/: Entries  Repository
rpm/rpm5/cooker/rpm-5.3.7/lua/socket/: auxiliar.c  auxiliar.h  buffer.c  buffer.h  except.c  except.h  ftp.lua  http.lua  inet.c  inet.h  io.c  io.h  ltn12.lua  luasocket.c  luasocket.h  mime.c  mime.h  mime.lua  options.c  options.h  select.c  select.h  smtp.lua  socket.h  socket.lua  tcp.c  tcp.h  timeout.c  timeout.h  tp.lua  udp.c  udp.h  unix.c  unix.h  url.lua  usocket.c  usocket.h  wsocket.c  wsocket.h
rpm/rpm5/cooker/rpm-5.3.7/lua/socket/CVS/: Entries  Repository
rpm/rpm5/cooker/rpm-5.3.7/syck/lib/: .cvsignore  .splintrc  Makefile.am  Makefile.in  bytecode.c  bytecode.re  emitter.c  gram.y  handler.c  implicit.c  implicit.re  node.c  syck.c  syck.h  syck_st.c  syck_st.h  token.c  token.re  yaml2byte.c  yamlbyte.h
rpm/rpm5/cooker/rpm-5.3.7/syck/lib/CVS/: Entries  Repository
rpm/rpm5/cooker/rpm-5.3.7/syck/tests/: .cvsignore  Basic.c  CuTest.c  CuTest.h  Emit.c  Makefile.am  Makefile.in  Parse.c  YTS.c  YTS.c.erb
rpm/rpm5/cooker/rpm-5.3.7/syck/tests/CVS/: Entries  Repository
selinux/ks/: test-sel.ks
selinux/setrans/: setrans
selinux/test/: sctp_houdini  setsockcon.c  tiocl_houdini
tool/injectso/: injectso-0.43.tgz
tool/pen/: download-vbs.vbs
tool/sslaudit/: README.TXT  SSLAudit.pl  sslaudit.ini
tool/t50/t50-2.45r-H2HC/: .gitignore  Makefile.am  autogen.sh  configure.ac
tool/t50/t50-2.45r-H2HC/man/: Makefile.am  t50.1
tool/t50/t50-2.45r-H2HC/src/: Makefile.am  Makefile.old  check.c  cksum.c  config.c  icmp.c  igmp.c  resolv.c  sock.c  t50.c  tcp.c  udp.c  usage.c
tool/t50/t50-2.45r-H2HC/src/include/: common.h
tool/t50/t50-2.45r-H2HC/src/release/: t50
(+761 files in other folders)
